spool-rs/crates/spool-cli/tests/snapshots/cli_snapshots__spool_create_help.snap
---
source: crates/spool-cli/tests/cli_snapshots.rs
expression: "snapshot(&[\"create\", \"--help\"])"
---
Create items

Usage: spool create [OPTIONS] [COMMAND]

Commands:
  module  Create a module
  change  Create a change

Options:
      --no-color  Disable color output
      --help-all  Print the full CLI reference (equivalent to `spool help --all`)
  -h, --help      Print help
