spool-rs/crates/spool-cli/tests/snapshots/cli_snapshots__spool_domain_help.snap
---
source: crates/spool-cli/tests/cli_snapshots.rs
expression: "snapshot(&[\"workflow\", \"--help\"])"
---
Initialize and inspect workflow definitions

Workflows define the artifact structure for changes (proposal, specs, tasks).
Use 'init' to create custom workflows or 'list' to see available schemas.

Examples:
  spool workflow list
  spool workflow show spec-driven
  spool workflow init

Usage: spool workflow [OPTIONS] <COMMAND>

Commands:
  init  Initialize workflow templates
  list  List available workflows
  show  Show workflow details

Options:
      --no-color
          Disable color output

      --help-all
          Print the full CLI reference (equivalent to `spool help --all`)

  -h, --help
          Print help (see a summary with '-h')
