spool-rs/crates/spool-cli/tests/snapshots/cli_snapshots__spool_help.snap
---
source: crates/spool-cli/tests/cli_snapshots.rs
expression: "snapshot(&[\"--help\"])"
---
AI-native system for spec-driven development

Usage: spool [OPTIONS] [COMMAND]

Commands:
  create       Create a new module or change proposal
  list         List changes, specs, or modules with status summaries
  show         Display details of a change, spec, or module
  status       Check completion status of change artifacts
  validate     Check changes, specs, and modules for errors and warnings
  archive      Move a completed change to archive and update main specs
  tasks        Manage implementation tasks for a change
  plan         Initialize and track project roadmap
  state        Track session state and working context
  agent        Generate instructions and context for AI coding agents
  ralph        Run an AI agent loop to implement a change
  init         Set up Spool in a project
  update       Refresh Spool instruction files and AI tool configs
  config       Read and write global Spool settings
  workflow     Initialize and inspect workflow definitions
  completions  Output shell completion scripts
  stats        Display command execution counts and history
  help         Show help for spool commands

Options:
      --no-color  Disable color output
      --help-all  Print the full CLI reference (equivalent to `spool help --all`)
  -h, --help      Print help
  -V, --version   Print version

Run 'spool help --all' for the complete CLI reference.
