spool-rs/crates/spool-cli/tests/snapshots/cli_snapshots__spool_version.snap
---
source: crates/spool-cli/tests/cli_snapshots.rs
expression: normalize_version(rs.stdout)
---
<VERSION>
