spool-rs/crates/spool-cli/tests/snapshots/cli_snapshots__spool_workflow_help.snap
---
source: crates/spool-cli/tests/cli_snapshots.rs
expression: "snapshot(&[\"workflow\", \"--help\"])"
---
Manage and run workflows

Usage: spool workflow [OPTIONS] <COMMAND>

Commands:
  init  Initialize workflow templates
  list  List available workflows
  show  Show workflow details

Options:
      --no-color  Disable color output
      --help-all  Print the full CLI reference (equivalent to `spool help --all`)
  -h, --help      Print help
